--- a/styles/main.css
+++ b/styles/main.css
@@ -1,34 +1,24 @@
-header {
+.col-12 {
 	background-color: #f2cc24;
 }
 
 h1, h2 {
-	padding-left: 250px;
+	margin-left: 20px;
 	font-size: 95%;
 	top: 15px;
 	bottom: 15px;
 }
 
-main {
-	/*padding-left: 250px;
-	padding-right: 20px;
-	padding-top: 10px;*/
-}
-
 .card {
 	display: inline-block;
+	margin-top: 20px;
 }
 
 img {
-	display: inline-block;
-	height: 300px;
-	width: 300px;
-/*	padding-right: 20px;
-	padding-top: 10px;*/
+	width: 100%;
 }
 
 .caption {
-	display: inline-block;
-	width: 300px;
-	border: 1px solid #f4f4f4;
+	padding: 20px;
+	border: 1px solid #f2f2f2;
 }
